--- a/src/main/webapp/sections/contact/model/contacts/model/company/list.xhtml
+++ b/src/main/webapp/sections/contact/model/contacts/model/company/list.xhtml
@@ -17,10 +17,10 @@
 			<p:ajax event="rowSelect" 	listener="#{companyController.onRowSelect}"   update="@form"/>  
 		    <p:ajax event="rowUnselect" listener="#{companyController.onRowUnselect}" update="@form"/>
 			
-		    <p:column filterBy="#{att.register.areaActuation}" 		filterMatchMode="contains" headerText="#{message.model_area_actuation}" style="text-align: left; width: 25%;">	<h:outputText value="#{att.register.areaActuation}"/>		</p:column>
-			<p:column filterBy="#{att.register.fancyName}" 			filterMatchMode="contains" headerText="#{message.model_name}"   	style="text-align: left; width: 40%;">	<h:outputText value="#{att.register.fancyName}"/>			</p:column>
+		    <p:column filterBy="#{att.register.areaActuation.areaActuation}" 	filterMatchMode="contains" headerText="#{message.model_area_actuation}" style="text-align: left; width: 25%;">	<h:outputText value="#{att.register.areaActuation.areaActuation}"/>	</p:column>
+			<p:column filterBy="#{att.register.fancyName}" 						filterMatchMode="contains" headerText="#{message.model_name}"   		style="text-align: left; width: 40%;">	<h:outputText value="#{att.register.fancyName}"/>					</p:column>
 <!-- 	    	<p:column filterBy="#{att.register.cnpj}" 				filterMatchMode="contains" headerText="#{message.model_cnpj}"		  	style="text-align: center;">	<h:outputText value="#{att.register.cnpj}"/>				</p:column> -->
-		    <p:column filterBy="#{att.register.phone.phoneNumber}" 	filterMatchMode="contains" headerText="#{message.model_phone_number}" 	style="text-align: left; width: 25%;">	<h:outputText value="#{att.register.phone.phoneNumber}"/>	</p:column>
+		    <p:column filterBy="#{att.register.phone.phoneNumber}" 				filterMatchMode="contains" headerText="#{message.model_phone_number}" 	style="text-align: left; width: 25%;">	<h:outputText value="#{att.register.phone.phoneNumber}"/>			</p:column>
 <!-- 		    <p:column filterBy="#{att.register.site}" 				filterMatchMode="contains" headerText="#{message.model_site}" 			style="text-align: left; width: 25%;">	<h:outputText value="#{att.register.site}"/>				</p:column> -->
 		</ui:decorate>
 
