--- a/src/main/webapp/sections/financial/model/banking/model/bank/list.xhtml
+++ b/src/main/webapp/sections/financial/model/banking/model/bank/list.xhtml
@@ -6,7 +6,7 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:ui="http://java.sun.com/jsf/facelets">
       
-	<h:panelGroup layout="block" styleClass="padder clearfix"> <h4 class="m-b m-t"><span class="semi-bold"><i class="icon-th-list"></i><h:outputText value=" #{message.financial_banking_bank_title}"/></span></h4> </h:panelGroup>
+	<h:panelGroup layout="block" styleClass="padder clearfix"> <h4 class="m-b m-t"><span class="semi-bold"><i class="icon-th-list"> </i><h:outputText value=" #{message.financial_banking_bank_title}"/></span></h4> </h:panelGroup>
 		
 	<ui:decorate template="/sections/layout/templates/partner/model/list.xhtml">
 		<ui:param name="controller" 	value="#{bankController}" />
@@ -17,8 +17,9 @@
 		<p:ajax event="rowSelect" 	listener="#{bankController.onRowSelect}"   update="@form"/>  
 	    <p:ajax event="rowUnselect" listener="#{bankController.onRowUnselect}" update="@form"/>
 		
-	 	<p:column filterBy="#{att.code}" filterMatchMode="contains" headerText="#{message.model_code}" style="width: 40%;"> <h:outputText value="#{att.code}"/> </p:column>
-		<p:column filterBy="#{att.name}" filterMatchMode="contains" headerText="#{message.model_bank}" style="width: 50%;">	<h:outputText value="#{att.name}"/> </p:column>
+	 	<p:column filterBy="#{att.code}" 		filterMatchMode="contains" headerText="#{message.model_code}" 		 style="width: 40%;"> <h:outputText value="#{att.code}"/> 		 </p:column>
+		<p:column filterBy="#{att.name}" 		filterMatchMode="contains" headerText="#{message.model_bank}" 		 style="width: 50%;"> <h:outputText value="#{att.name}"/> 		 </p:column>
+		<p:column filterBy="#{att.description}" filterMatchMode="contains" headerText="#{message.model_description}" style="width: 50%;"> <h:outputText value="#{att.description}"/> </p:column>
 	</ui:decorate>
 		
 </ui:composition>
